docs/api/0.2.0/ironwood/ds/IntLinkedList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# IntLinkedList

**Class** · `ironwood.ds.IntLinkedList`

```java
public class IntLinkedList implements Iterable<IntHolder>
```

**Implements:** [`Iterable<IntHolder>`](../lang/Iterable.md)


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`IntLinkedList(int)`](#member-IntLinkedList-28-int-29-) |  |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`addFirst(int)`](#member-addFirst-28-int-29-) |  |
| [`add(int)`](#member-add-28-int-29-) |  |
| [`addLast(int)`](#member-addLast-28-int-29-) |  |
| [`first()`](#member-first-28--29-) |  |
| [`removeFirst()`](#member-removeFirst-28--29-) |  |
| [`last()`](#member-last-28--29-) |  |
| [`removeLast()`](#member-removeLast-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Constructors

<a name="member-IntLinkedList-28-int-29-"></a>

### `IntLinkedList(int)`

```java
public IntLinkedList(int initialCapacity)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-addFirst-28-int-29-"></a>

### `addFirst(int)`

```java
public void addFirst(int value)
```


[Back to member summary](#member-summary)

<a name="member-add-28-int-29-"></a>

### `add(int)`

```java
public void add(int value)
```


[Back to member summary](#member-summary)

<a name="member-addLast-28-int-29-"></a>

### `addLast(int)`

```java
public void addLast(int value)
```


[Back to member summary](#member-summary)

<a name="member-first-28--29-"></a>

### `first()`

```java
public int first()
```


[Back to member summary](#member-summary)

<a name="member-removeFirst-28--29-"></a>

### `removeFirst()`

```java
public int removeFirst()
```


[Back to member summary](#member-summary)

<a name="member-last-28--29-"></a>

### `last()`

```java
public int last()
```


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public int removeLast()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<IntHolder> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
