docs/api/0.2.2-beta/ironwood/ds/IntLinkedList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# IntLinkedList

**Class** · `ironwood.ds.IntLinkedList`

```java
public class IntLinkedList implements Iterable<IntHolder>
```

**Implements:** [`Iterable<IntHolder>`](../lang/Iterable.md)

Provides a linked list of integer values.


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`IntLinkedList(int)`](#member-IntLinkedList-28-int-29-) | Creates a new IntLinkedList. |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) | Returns the initial capacity. |
| [`clear()`](#member-clear-28--29-) | Removes all stored values. |
| [`addFirst(int)`](#member-addFirst-28-int-29-) | Adds the supplied first. |
| [`add(int)`](#member-add-28-int-29-) | Adds the supplied value. |
| [`addLast(int)`](#member-addLast-28-int-29-) | Adds the supplied last. |
| [`first()`](#member-first-28--29-) | Performs the first operation. |
| [`removeFirst()`](#member-removeFirst-28--29-) | Performs the remove first operation. |
| [`last()`](#member-last-28--29-) | Performs the last operation. |
| [`removeLast()`](#member-removeLast-28--29-) | Performs the remove last operation. |
| [`contains(int)`](#member-contains-28-int-29-) | Returns whether the supplied value is present. |
| [`isEmpty()`](#member-isEmpty-28--29-) | Returns whether this value is empty. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |

## Constructors

<a name="member-IntLinkedList-28-int-29-"></a>

### `IntLinkedList(int)`

```java
public IntLinkedList(int initialCapacity)
```

Creates a new IntLinkedList.


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```

Returns the initial capacity.


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```

Removes all stored values.


[Back to member summary](#member-summary)

<a name="member-addFirst-28-int-29-"></a>

### `addFirst(int)`

```java
public void addFirst(int value)
```

Adds the supplied first.


[Back to member summary](#member-summary)

<a name="member-add-28-int-29-"></a>

### `add(int)`

```java
public void add(int value)
```

Adds the supplied value.


[Back to member summary](#member-summary)

<a name="member-addLast-28-int-29-"></a>

### `addLast(int)`

```java
public void addLast(int value)
```

Adds the supplied last.


[Back to member summary](#member-summary)

<a name="member-first-28--29-"></a>

### `first()`

```java
public int first()
```

Performs the first operation.


[Back to member summary](#member-summary)

<a name="member-removeFirst-28--29-"></a>

### `removeFirst()`

```java
public int removeFirst()
```

Performs the remove first operation.


[Back to member summary](#member-summary)

<a name="member-last-28--29-"></a>

### `last()`

```java
public int last()
```

Performs the last operation.


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public int removeLast()
```

Performs the remove last operation.


[Back to member summary](#member-summary)

<a name="member-contains-28-int-29-"></a>

### `contains(int)`

```java
public boolean contains(int value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```

Returns whether this value is empty.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<IntHolder> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
